--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ JHIPSTER_SLEEP=30 # gives time for other services to boot before the application
 SPRING_ELASTICSEARCH_REST_URIS=http://elasticsearch:9200
 SPRING_MAIL_HOST=smtp.gmail.com
 SPRING_MAIL_PORT=587
-SPRING_MAIL_USERNAME=suaybsimsek58@gmail.com
-SPRING_MAIL_PASSWORD=10638721
+SPRING_MAIL_USERNAME=*****
+SPRING_MAIL_PASSWORD=****
 SPRING_MAIL_TLS=true
 SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH=true
 SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE=true
